Fix mobile WhatsApp icon alignment centering

--- a/src/components/layout/WhatsAppButton.module.css
+++ b/src/components/layout/WhatsAppButton.module.css
@@ -99,6 +99,10 @@
     .button {
         width: 50px;
         height: 50px;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .icon {
